@@ -1,8 +1,9 @@
-Changes in QMPlay2 build 15.12.03:
+Changes in QMPlay2 build 15.12.04:
 	- setting priorities of decoders and A/V outputs is now more convenient,
 	- improve QOpenGLWidget performance (Qt5 only, not used by default),
 	- simple visualization shows RMS of displayed signal in side bars,
 	- support for HEVC, VP8 and VP9 decoding in VA-API (not tested!),
+	- changes in AudioCD module, so any tracks must be added again,
 	- falling horizontal lines behave better visualizations,
 	- play next entry after playback error (as default),
 	- support for HEVC decoding in VDPAU,
